[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/tutorial/Fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/tutorial/Icons/dodge_preview/dodge_preview.ogv" type="VideoStream" id=2]
[ext_resource path="res://addons/tutorial/Scenes/Options.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="YourFirstGame" type="Button"]
anchor_right = 1.0
margin_bottom = 105.0
rect_min_size = Vector2( 333, 105 )
size_flags_horizontal = 3
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
title = "Your First Game"
stream = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thumbnail" type="VideoPlayer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_vertical = 3
stream = ExtResource( 2 )
autoplay = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 114.0
margin_right = 118.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 1345.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 1213.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Your First Game"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 1213.0
margin_bottom = 66.0
size_flags_vertical = 3
custom_constants/separation = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 29.0
size_flags_vertical = 3
text = "Author: Godot Engine"
valign = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_top = 4.0
margin_right = 143.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 193.0
margin_bottom = 29.0
size_flags_vertical = 3
text = "Source:"
valign = 1

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 21.0
size_flags_vertical = 4

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 1213.0
margin_bottom = 100.0
size_flags_vertical = 3
text = "Duration:"

[connection signal="gui_input" from="." to="." method="_on_YourFirstGame_gui_input"]
[connection signal="pressed" from="." to="." method="_on_YourFirstGame_pressed"]
[connection signal="finished" from="HBoxContainer/Thumbnail" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
